--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,35 @@
 # Dependencies
-node_modules/**
+node_modules/
+bun_install/
 
 # Build files
 build/
+dist/
+*.tsbuildinfo
 
 # Environment variables
 .env
-*.env
+.env.local
+.env.*.local
 
 # IDE files
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
 
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Local database
 chat_history.db
+*.sqlite
+*.sqlite3
 
 # Lock file (User requested)
 package-lock.json
@@ -29,21 +41,37 @@ docs/zeugs/
 .cursor/
 .cursor*
 .aider*
-# Coverage
-node_modules/
-coverage/*.css
-coverage/*.js
-coverage/*.png
-coverage/index.html
-coverage/lcov-report/
-coverage/utils/
-coverage/types/
-coverage/tools/
-coverage/server/
-coverage/schema/
-!coverage/lcov.info
-coverage/coverage-final.json
 
-#bun
+# Coverage
+coverage/
+.nyc_output/
+*.lcov
+
+# Bun
 bun.lockb
 bun.lock
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Testing
+*.test.js
+*.test.ts
+*.spec.js
+*.spec.ts
+
+# OpenCode plans (generated)
+.opencode/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Screenshot captures (from DEBUG mode)
+screenshots/
+*.png
+*.jpg
+*.jpeg
