--- a/package.json
+++ b/package.json
@@ -26,15 +26,14 @@
   "license": "GPL-3.0-or-later",
   "type": "module",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "1.12.3",
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "@mozilla/readability": "0.6.0",
     "@types/axios": "0.9.36",
     "@types/jsdom": "21.1.7",
     "@types/mozilla__readability": "0.4.2",
-    "axios": "1.10.0",
+    "axios": "^1.13.4",
     "jsdom": "26.1.0",
     "minimist": "1.2.8",
-    "prune": "0.0.2",
     "puppeteer": "24.10.1",
     "zod": "3.25.67"
   },
@@ -42,9 +41,10 @@
     "@biomejs/biome": "1.9.4",
     "@types/minimist": "1.2.5",
     "@types/node": "22.15.30",
-    "@vitest/coverage-v8": "3.2.2",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "bun-types": "latest",
     "typescript": "5.8.3",
-    "vitest": "3.2.2"
+    "vitest": "^4.0.18"
   }
 }
